--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "request-header-parser-microservice",
+  "name": "url-shortener-microservice",
   "version": "1.0.0",
-  "description": "A FCC Project : request header parser microservice",
+  "description": "A FCC Project : URL Shortener Microservice",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongodb": "^2.0.42"
   }
 }
