--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.14.0",
-    "mongodb": "^2.0.42"
+    "mongodb": "^2.0.42",
+    "morgan": "^1.7.0"
   }
 }
